@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram
CommonUser o-- Meal
CommonUser *-- UserPreference
Meal *-- Nutrients
Meal o-- Ingredient
UserPreference *-- NutrientRange
NutrientRange *-- Range

interface User {
    String getUsername()
    String getPassword()
    List<Meal> getMeals()
    UserPreference getPreferences()
}

class CommonUser implements User {
- private String username
- private String password
- private List<Meal> meals
- private UserPreference preferences
}

class Meal {
- private MealType mealType
- private String name
- private Nutrients nutrients
- private List<Ingredient> ingredients
- private List<HealthPreference> healthPreferences
- private List<DietPreference> dietPreferences
- private List<CuisinePreference> cuisinePreferences
}

class UserPreference {
- private NutrientRange nutrientRange
- private List<HealthPreference> healthPreferences
- private List<DietPreference> dietPreferences
- private List<CuisinePreference> cuisinePreferences
}

class Nutrients {
- private int calories
- private int fat
- private int protien
- private int carbs
}

class NutrientRange {
- private Range calorieRange
- private Range fatRange
- private Range proteinRange
- private Range carbRange
}

class Ingredient {
- private String name
- private int amount
- private String unit
}

class Range {
    private int lowerBound
    private int upperBound
}

enum MealType {
BREAKFAST
LUNCH
DINNER
}

enum HealthPreference {}

enum DietPreference {}

enum CuisinePreference{}


@enduml